template + raport.pdf

--- a/Assigment 1/raport/raport.tex
+++ b/Assigment 1/raport/raport.tex
@@ -15,14 +15,23 @@ Kai Ejler Rasmussen}
 \begin{document}
 \maketitle
 
-\section{Exercises}
-\subsection{Question 1: Fundamental Abstractions}
+\section*{Exercises}
+\subsection*{Question 1: Fundamental Abstractions}
+\begin{enumerate}
+	\item 
+	\item
+	\item
+	\item
+\end{enumerate}
 
-\subsection{Question 2: Techniques for Performance}
+\subsection*{Question 2: Techniques for Performance}
+\begin{enumerate}
+	\item 
+	\item
+	\item
+\end{enumerate}
 
-\section{Questions for Discussion on Architecture}
-
-
+\section*{Questions for Discussion on Architecture}
 
 \end{document}
 
