--- a/Assignment 4/raport/raport.tex
+++ b/Assignment 4/raport/raport.tex
@@ -15,5 +15,21 @@ Kai Ejler Rasmussen}
 \begin{document}
 \maketitle
 
+\section*{Exercises}
+\subsection*{Question 1: Reliability}
+\begin{enumerate}
+	\item In the daisy chain network both network links must work for the network to be fully connected, and the probability that one of them fails is $2p$ (we assume that the event of failing links are independent), so we get the probability that all buildings are connected to be: \\
+  $P(connected) = 1 - 2p$
+ 	\item In the fully connected network the network we still connect all the buildings if we loose a single link, but the connnection will be lost if we loose two or more links. We get the probability (again assuming that all failures are independent) that all buildings are connected to be: \\
+  $P(connect) = 1 - (3 \cdot p^2 \cdot (1-p) + p^3)$. \\
+  $3 \cdot p^2 \cdot (1-p)$ is the prohability that exactly two links fails (using the bionomial probability density function), and $p^3$ is the prohability that all three links fails. 
+  \item The prohability that the daisy chain network is connecting all buldings: \\
+  $C_1 = 1 - 2 \cdot 0.000001 = 0.999998$ \\
+  The prohability that the fully connected network is connecting all buildings: \\
+  $C_2 = 1 - (3 \cdot (0.0001)^2 \cdot (1-0.0001) + 0.0001^3) = 0.99999996$ \\
+  So assuming that all network failures are independent and that the town council wants the most reliable solution he should go with the fully connected network.
+\end{enumerate}
+
+
 
 \end{document}
