--- a/Assignment 4/raport/raport.tex
+++ b/Assignment 4/raport/raport.tex
@@ -52,10 +52,9 @@ When the participant receives the preCommit message, it sends an acknowledgement
 	\newline
 	
 	Our load balancing is the following: On all read requests (requests that can be handle both by the master-server and the slave servers) we gives all slave-servers a twice as large prohability to receive the request than the master server. The reason for the distribution is that the master-server also is responsible for handling write-requests, and to balance the load between all servers we doesn't forward as many read-requests to the master-server, as to the slave-servers.
-	\item
-	\item
+	\item The advantages in the system now, after replication, is definitely that the read throughput increases potentially per slave added to the system. Though is one of the disadvantages that adding a slave also adds some latency to the master server, since it need to delegate the replication requests to the slaves. In addition with this solution haven't we still dealt with the throughput problems regarding writes, which still only is handled by one server.
+	\item A client could ensure monotonic read consistency by saving the snapshot identifier of its last read request and every time the client would send another read-request it would compare the received snapshot identifier with the saved one. If the received snapshot identifier is lower than the saved one, the client knows that the received read is older than a previoues read, which would break the property of monotonic read consistency. The solve this problem the client could discard the result every time it sees a outdated read, and redo the read undtil it gets a result with a snapshot identifier, which is equal to, or higher than the saved snapshot identifier.
 	\item The current implementation of the replication waits for an ack from each slave. This means that the master will hang if the network is split. This leaves the data on the slaves frozen in time at the moment of the network split. The slaves will still serve reads but they are never updated through replication, thus serving possibly outdated and invalid data.
 \end{enumerate}
-
 
 \end{document}
